# unissh

./: .gitignore  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  compose.prod.yml  compose.yml  justfile
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: client.yml
client/: package-lock.json  package.json
client/src/: App.tsx  vite-env.d.ts
client/src-tauri/: Cargo.toml  deny.toml
client/src-tauri/src/: commands.rs  dto.rs  lib.rs
client/src-tauri/src/cloud/: client.rs  commands.rs  config.rs  identity.rs  mod.rs  oidc.rs  onboard.rs  tests.rs  transport.rs
client/src/bridge/: api.ts  sources.ts  types.ts  vaults.ts
client/src/components/: ContextMenu.tsx  Modal.tsx  mono.tsx  primitives.tsx
client/src/i18n/locales/: en.ts  ru.ts
client/src/mobile/: MobileApp.tsx
client/src/overlays/: CommandPalette.tsx  Entry.tsx  Feedback.tsx  GroupsModal.tsx  ImportPreview.tsx  Modals.tsx
client/src/shell/: Shell.tsx
client/src/store/: app.ts  ctx.ts  responsive.ts  sftp-types.ts
client/src/support/: qr.test.ts  qr.ts  wallets.test.ts  wallets.ts
client/src/theme/: ThemeProvider.tsx  termPrefs.test.ts  tokens.test.ts  tokens.ts
client/src/views/: ServerVaultsSection.tsx  SettingsSupport.tsx  TermTabStrip.tsx  TerminalPreview.tsx  ViewBroadcast.tsx  ViewFleet.tsx  ViewHosts.tsx  ViewKnown.tsx  ViewRun.tsx  ViewSecrets.tsx  ViewSettings.tsx  ViewTerminal.tsx  ViewTunnels.tsx
client/src/views/sftp/: Breadcrumb.tsx  FileList.tsx  FileRow.tsx  PaneSlot.tsx  TabStrip.tsx  TextEditor.tsx  TransferQueue.tsx  ViewSftp.tsx  dialogs.tsx  hostpicker.tsx
deploy/: .env.example  .env.localhost  Caddy.Dockerfile  README.md
rust-core/crates/cli/: Cargo.toml
rust-core/crates/crypto/: Cargo.toml
rust-core/crates/crypto/src/: lib.rs  signature.rs
rust-core/crates/ffi/: Cargo.toml
rust-core/crates/ffi/src/: lib.rs
rust-core/crates/ffi/tests/: e2e.rs  veha2.rs
rust-core/crates/keychain/: Cargo.toml
rust-core/crates/keychain/src/: lib.rs  onboarding_pake.rs  unlock.rs
rust-core/crates/keychain/tests/: onboarding.rs
rust-core/crates/ssh-agent/: Cargo.toml
rust-core/crates/ssh-agent/tests/: import.rs
rust-core/crates/ssh-transport/: Cargo.toml
rust-core/crates/ssh-transport/src/: client.rs  lib.rs  sftp.rs
rust-core/crates/ssh-transport/tests/: integration.rs  ssh_config.rs
rust-core/crates/storage/: Cargo.toml
rust-core/crates/storage/src/: store.rs
rust-core/crates/storage/tests/: concurrent_open.rs  storage.rs
rust-core/crates/sync/: Cargo.toml
rust-core/crates/sync/src/: engine.rs  lib.rs
rust-core/crates/sync/tests/: adversarial_p6.rs  sync.rs
rust-core/crates/vault/: Cargo.toml
rust-core/crates/vault/src/: membership.rs  vault.rs
rust-core/crates/vault/tests/: membership.rs  rotation.rs  vault.rs
scripts/: bump-version.py
server/: CLIENT.md  Cargo.toml  README.md  config.example.toml  docker-compose.yml
server-ui/: README.md
server-ui/crypto-wasm/src/: lib.rs
server-ui/src/: App.tsx
server-ui/src/access/: BootstrapModal.tsx  ClaimModal.tsx  InviteModal.tsx  KeysetModal.tsx  Login.tsx  MintGrantModal.tsx  OpsLogin.tsx
server-ui/src/api/: auth-service.ts  client.ts  errors.ts  index.ts  types.ts
server-ui/src/crypto/: provider.ts  wasm-provider.ts
server-ui/src/i18n/: index.ts
server-ui/src/screens/: Accounts.tsx  Audit.tsx  Config.tsx  Devices.tsx  Directory.tsx  Enroll.tsx  Grants.tsx  Health.tsx  Invites.tsx  Maintenance.tsx  Metrics.tsx  Objects.tsx  Overview.tsx  Relay.tsx  Sessions.tsx  Spaces.tsx  Tenants.tsx  Vaults.tsx  registry.tsx
server-ui/src/shell/: Shell.tsx  Sidebar.tsx  Titlebar.tsx  nav.ts
server-ui/src/store/: session.ts  ui.ts
server-ui/src/theme/: tokens.ts
server-ui/src/ui/: overlays.tsx  primitives.tsx  useCopy.ts
server-ui/src/util/: format.ts
server/docs/: audit-entry-blob-format.md
server/migrations/postgres/: 0002_escrow.sql  0003_oidc.sql  0004_oidc_hardening.sql
server/migrations/sqlite/: 0001_init.sql  0002_escrow.sql  0003_oidc.sql  0004_oidc_hardening.sql
server/migrations_v2/postgres/: 0001_init.sql
server/src/: config.rs  error.rs  ids.rs  lib.rs  main.rs  obs.rs  state.rs
server/src/domain/: seq.rs
server/src/http/: extract.rs  mod.rs
server/src/modules/: admin.rs  audit.rs  escrow.rs  identity.rs  instance.rs  mod.rs  oidc.rs  ops.rs  pending.rs  policy.rs  spaces.rs  sync.rs  vault_meta.rs
server/src/store/: accounts_repo.rs  admin_repo.rs  attest_repo.rs  audit_repo.rs  auth_repo.rs  identity_repo.rs  instance_repo.rs  invites_repo.rs  mod.rs  models.rs  pending_repo.rs  policy_repo.rs  spaces_repo.rs  sync_repo.rs
server/tests/: accounts.rs  admin_ops.rs  admin_ui_handoff.rs  attest_http.rs  config_v2.rs  device_self_enroll.rs  enroll_grants.rs  escrow_http.rs  escrow_store.rs  hardening.rs  identity_http.rs  instance_claim.rs  instance_store.rs  invites_pending_store.rs  join_http.rs  oidc_http.rs  oidc_live.rs  oidc_store.rs  ops.rs  oracle_sync.rs  pending_http.rs  pg_integration.rs  policy_audit.rs  record_sig.rs  schema_v2.rs  seq_bump.rs  spaces_http.rs  spaces_store.rs  store_sync.rs  sync_http.rs  zk_e2e.rs
server/tests/common/: mod.rs
website/: astro.config.mjs
website/public/: CNAME
website/src/components/: AppWindow.astro  ArchitectureDiagram.astro  CodeShowcase.astro  DownloadCTA.astro  FeatureGrid.astro  FeatureRail.astro  Icon.astro  SecurityStrip.astro  SiteFooter.astro  SiteHeader.astro  TrustStrip.astro
website/src/content/docs/architecture/: crypto-and-keys.md  sync-model.md  system-overview.md  zero-knowledge-model.md
website/src/content/docs/components/: client.md  crates.md  rust-core.md  server-audit.md  server-ui.md  server.md
website/src/content/docs/operations/: backups.md  build.md  ci-cd.md  configuration.md  deploy.md
website/src/content/docs/overview/: install.md  introduction.md
website/src/pages/: index.astro  support.astro
website/src/styles/: landing.css  theme.css
