[package]
name = "unissh"
version = "0.1.0"
description = "UniSSH — cross-platform SSH client"
authors = ["UniSSH"]
edition = "2021"
rust-version = "1.85"

# This empty table pins src-tauri as its own workspace root, so Cargo does not try
# to attach it to the sibling rust-core workspace reached via the path dependency.
[workspace]

[lib]
name = "unissh_lib"
# staticlib/cdylib -> iOS/Android ; rlib -> desktop binary links the lib
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Open terminal hyperlinks (and About links) in the system default browser.
tauri-plugin-opener = "2"
# Cross-platform logging: stdout + rotating file (per-OS log dir) + webview console.
tauri-plugin-log = "2"
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"

# Cloud server integration: blocking HTTP client (rustls TLS, no system OpenSSL)
# and base64 STANDARD (the server's wire encoding for every crypto blob/id).
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "blocking"] }
# x-www-form-urlencoded body for the OIDC token exchange (reqwest's `.form()` is
# stripped by default-features=false; this is the same crate it uses internally).
serde_urlencoded = "0.7"
base64 = "0.22.1"
# Content-stable Idempotency-Key for sync/push (server replays identical pushes).
sha2 = "0.10"

# The SSH core — depended on directly as a path dependency (its crate-type includes `lib`).
unissh-ffi = { path = "../../rust-core/crates/ffi" }

# Mobile-only biometric unlock (no desktop support / no-op on desktop).
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
tauri-plugin-biometric = "2"

# OS keychain for the Secret Key (per-platform native backend; no extra C deps).
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }
# iOS reuses the same `keyring` code as desktop (Apple Security framework backend).
[target.'cfg(target_os = "ios")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
# Raw objc2 message-send to set the WKWebView scroll view's
# contentInsetAdjustmentBehavior = .never (see run() / with_webview): without it
# iOS confines web content to the safe area and a dead band shows below the tab
# bar. objc2 is already in the tree transitively via tauri/wry; pin the same major.
objc2 = "0.6"

[features]
# this feature is used for production builds where `devUrl` is unset; see tauri.conf.json
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
# Live cloud integration tests (ignored by default): temp instance dirs + server DB.
tempfile = "3"
