[package]
name = "unissh-ssh-agent"
version.workspace = true
description = "Embedded in-memory SSH agent for UniSSH: keys live only in-process, mlock/zeroize, challenge signing (spec 10.1)."
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
unissh-vault = { path = "../vault" }
# Signing/parsing of any SSH key type: Ed25519, ECDSA (p256/p384/p521), RSA.
ssh-key = { version = "0.6", features = [
    "ed25519",
    "ecdsa",
    "p256",
    "p384",
    "p521",
    "rsa",
    "alloc",
    "std",
    "rand_core",
    # Decryption of password-protected OpenSSH private keys (bcrypt-pbkdf + aes/chacha).
    "encryption",
] }
# Decryption of encrypted PKCS#8 (`BEGIN ENCRYPTED PRIVATE KEY`, PBES2:
# PBKDF2/scrypt + AES) — `from_pkcs8_encrypted_pem`.
pkcs8 = { version = "0.10", features = ["encryption", "pem", "std"] }
# Parsing of classic PEM private keys on import (PKCS#1/PKCS#8/SEC1).
# `ssh-key` reads only the OpenSSH container; these crates parse the remaining
# formats, after which we convert to OpenSSH (see `import.rs`).
rsa = { version = "0.9", features = ["std", "pem"] }
p256 = { version = "0.13", features = ["pkcs8", "pem", "std"] }
p384 = { version = "0.13", features = ["pkcs8", "pem", "std"] }
p521 = { version = "0.13", features = ["pkcs8", "pem", "std"] }
ed25519-dalek = { version = "2.2", features = ["pkcs8", "pem"] }
# We do RSA signing (rsa-sha2-512 / pkcs1v15) ourselves: ssh-key 0.6.7 mixes up
# the components in its rsa converter, and its RSA signature does not verify. `oid`
# is needed for `pkcs1v15::SigningKey`.
sha2 = { version = "0.10", features = ["oid"] }
signature = "2"
zeroize = "1.8"
libc = "0.2"
thiserror = "2"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
ed25519-dalek = "2.2"
unissh-vault = { path = "../vault" }
unissh-keychain = { path = "../keychain" }
unissh-storage = { path = "../storage" }
