[package]
name = "unissh-storage"
version.workspace = true
description = "UniSSH local encrypted storage (SQLite+SQLCipher): instance isolation, item/vault/version/tombstone/signature model designed for future sync."
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
zeroize = "1.8"
hex = "0.4"

# SQLite + SQLCipher, built from source. SQLCipher links OpenSSL (libcrypto):
#   * Linux / macOS: link the system OpenSSL (libssl-dev / macOS system) — small & fast.
#   * Windows, Android, iOS: no system OpenSSL exists (and the distributed binary
#     must be self-contained), so vendor + statically link OpenSSL (built from
#     source via openssl-src). Windows needs perl + nasm at build time (see the
#     client.yml windows leg); Android needs the NDK toolchain on PATH (mobile leg).
[target.'cfg(not(any(windows, target_os = "android", target_os = "ios")))'.dependencies]
rusqlite = { version = "0.39", features = ["bundled-sqlcipher"] }
[target.'cfg(any(windows, target_os = "android", target_os = "ios"))'.dependencies]
rusqlite = { version = "0.39", features = ["bundled-sqlcipher-vendored-openssl"] }

[dev-dependencies]
tempfile = "3"

# Raw connection for the upgrade test (we build a v3 DB before Storage::open).
# Mirror the per-OS SQLCipher/OpenSSL split above.
[target.'cfg(not(any(windows, target_os = "android", target_os = "ios")))'.dev-dependencies]
rusqlite = { version = "0.39", features = ["bundled-sqlcipher"] }
[target.'cfg(any(windows, target_os = "android", target_os = "ios"))'.dev-dependencies]
rusqlite = { version = "0.39", features = ["bundled-sqlcipher-vendored-openssl"] }
