[package]
name = "unissh-sync"
version.workspace = true
description = "UniSSH client sync engine: pull/push/delta, verify-before-apply, signed-version LWW, surfacing conflicts, anti-rollback cursor (server-tz §3/§9/§1.1). The transport is untrusted; there is no real network/server in this crate."
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
unissh-crypto = { path = "../crypto" }
unissh-storage = { path = "../storage" }
unissh-vault = { path = "../vault" }
unissh-keychain = { path = "../keychain" }
thiserror = "2"
zeroize = "1.8"
# Logging facade — push/pull + conflict diagnostics. Open ids/counters only,
# never object plaintext or key material.
log = "0.4"

[dev-dependencies]
unissh-crypto = { path = "../crypto" }
unissh-keychain = { path = "../keychain" }
